2004-05-21 Scott Dattalo <scott@dattalo.com>
	* src/register.h: Added new accessor member functions to the Register
	class to manipulate the new way register values are represented.
	
2004-05-20 Scott Dattalo <scott@dattalo.com>
	* Tons of files... Changed the Register class' 'unsigned int value'
	field to an object. The get() and put() accessor functions now provide
	read and write access.

2004-05-20 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc: Syntax highlighting now is only applied to lines
	that are associated with generated code.
	
2004-05-16 Scott Dattalo <scott@dattalo.com>
	* src/processor.h, src/processor.cc:
	Added mapping between program memory and source file line numbers
	
2004-05-16 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src.h, src/gui_src_asm.cc: Fixed memory leak with 'canbreak' XPM.
	Added 'SourcePage' class to hold information about a source browser notebook
	page. Corresponding info in 'SourceBrowserAsm_Window'.
	Added a new member to the sa_entry structure to keep track of pixmaps.
	
2004-05-15 Scott Dattalo <scott@dattalo.com>
	* src/pic-processor: If the simulation is started from an address that has
	an execution break, now gpsim will ignore that break.
	* xpm/canbreak.xpm: New xpm that's used to indicate source lines that will
	accept breakpoints.
	* gui/gui_src.h, gui/gui_src_asm.h: Added 'canbreak' XPM to the source
	browser lines that can accept break points. NOTE: this code currently
	leaks memory!

2004-05-12  Manuel Bouyer <bouyer@antioche.eu.org>
	* src/16bit-instructions.cc, src/p18x.cc, src/p18x.h, src/pic-instructions.cc,
	 src/pic-processor.cc, src/pic-processor.h: Fix usart problems in 18x devices.
	* src/pir.cc, src/pir.h, src/uart.cc, src/uart.h: Fix usart bugs.
	(Changes were submitted as a patch and applied by Scott).
	
2004-05-15 Scott Dattalo <scott@dattalo.com>
	* src/xref.h, xref.cc: added get_value() member function to XrefObject class